Updated test for classes in core
Updatet tests for Movie, User and Watchlist

Issue: #13